<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <TextView
            android:id="@id/txt_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_2"
            android:textSize="@dimen/dp_16"
            android:textColor="@color/color_black"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dp_4"
            android:layout_marginBottom="@dimen/dp_2">

        <LinearLayout
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dp_12"
                    android:textColor="@color/color_000000_50"
                    android:text="@string/account_total"/>

            <TextView
                    android:id="@id/txt_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dp_12"
                    android:textColor="@color/color_222222"
                    android:text="0.00"/>
        </LinearLayout>


        <LinearLayout
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dp_12"
                    android:textColor="@color/color_000000_50"
                    android:text="@string/used"/>

            <TextView
                    android:id="@id/txt_used"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dp_12"
                    android:textColor="@color/color_222222"
                    android:text="0.00"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="right">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dp_12"
                    android:textColor="@color/color_000000_50"
                    android:text="@string/profit_rate"/>

            <TextView
                    android:id="@id/txt_profit_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dp_12"
                    android:textColor="@color/color_222222"
                    android:text="0.00"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>